--- a/index.html
+++ b/index.html
@@ -14,54 +14,31 @@
         <div class="fondotelon">     
         <img src="Logo_Amazing_Events.png" class="rounded float-start" alt="Logo" width="250" height="100">
         <h1  class="display-1 text-center text-white">Amazing Event</h1>
-        <div class="container-fluid">
-            <div class="row bg-black align-self-center">
-                <div class="col">
-                    <button type="button" class="btn btn-outline-light btn-lg">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                            </li>
-                        </ul>
-                    </button>
+        <div class="container-fluid row bg-black align-self-center">
+            <nav class="navbar navbar-expand-lg bg-body-black">
+                <div class="container-fluid">
+                  <a class="navbar-brand btn btn-outline-light btn-lg text-white" href="index.html">Home</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item p-2">
+                        <a class="nav-link btn btn-outline-light btn-lg text-white" aria-current="page" href="upcoming.html">Upcoming Events</a>
+                      </li>
+                      <li class="nav-item p-2">
+                        <a class="nav-link btn btn-outline-light btn-lg text-white" href="past.html">Past Events</a>
+                      </li>
+                      <li class="nav-item p-2">
+                        <a class="nav-link  btn btn-outline-light btn-lg text-white" href="contact.html">Contact</a>
+                      </li>
+                      <li class="nav-item p-2">
+                        <a class="nav-link  btn btn-outline-light btn-lg text-white">Stats</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-                <div class="col">
-                    <button type="button" class="btn btn-outline-light btn-lg">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="upcoming.html">Upcoming Events</a>
-                            </li>
-                        </ul>
-                    </button>
-                </div>
-                <div class="col">
-                    <button type="button" class="btn btn-outline-light btn-lg">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="past.html">Past Events</a>
-                            </li>
-                        </ul>
-                    </button>
-                </div>
-                <div class="col">
-                    <button type="button" class="btn btn-outline-light btn-lg">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </button>
-                </div>
-                <div class="col">
-                    <button type="button" class="btn btn-outline-light btn-lg">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="stats.html">Stats</a>
-                            </li>
-                        </ul>
-                    </button>
-                </div>
-            </div>
+              </nav>
         </div>
         <div class="container d-flex justify-content-between">
             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="white" class="bi bi-chevron-left" viewBox="0 0 16 16">
