--- a/past.html
+++ b/past.html
@@ -8,70 +8,48 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" href="Logo_Amazing_Events.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container-fluid">
         <div class="fondosala">     
         <img src="Logo_Amazing_Events.png" class="rounded float-start" alt="Logo" width="250" height="100">
         <h1  class="display-1 text-center text-black">Amazing Event</h1>
-            <div class="container-fluid">
-                <div class="row bg-black align-self-center">
-                    <div class="col">
-                        <button type="button" class="btn btn-outline-light btn-lg">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                                </li>
-                            </ul>
-                        </button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-outline-light btn-lg">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="upcoming.html">Upcoming Events</a>
-                                </li>
-                            </ul>
-                        </button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-outline-light btn-lg">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="past.html">Past Events</a>
-                                </li>
-                            </ul>
-                        </button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-outline-light btn-lg">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
-                                </li>
-                            </ul>
-                        </button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-outline-light btn-lg">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="stats.html">Stats</a>
-                                </li>
-                            </ul>
-                        </button>
-                    </div>
+        <div class="container-fluid row bg-black align-self-center">
+            <nav class="navbar navbar-expand-lg bg-body-black">
+                <div class="container-fluid">
+                  <a class="navbar-brand btn btn-outline-light btn-lg text-white" href="index.html">Home</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item p-2">
+                        <a class="nav-link btn btn-outline-light btn-lg text-white" aria-current="page" href="upcoming.html">Upcoming Events</a>
+                      </li>
+                      <li class="nav-item p-2">
+                        <a class="nav-link btn btn-outline-light btn-lg text-white" href="past.html">Past Events</a>
+                      </li>
+                      <li class="nav-item p-2">
+                        <a class="nav-link  btn btn-outline-light btn-lg text-white" href="contact.html">Contact</a>
+                      </li>
+                      <li class="nav-item p-2">
+                        <a class="nav-link  btn btn-outline-light btn-lg text-white" href="stats.html">Stats</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-            </div>
-            <div class="container d-flex justify-content-between">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-left" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-                  </svg>
-                <h2  class="display-3 text-center text-black">Past Events</h2>
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-right" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-                  </svg>
-            </div>
+              </nav>
+        </div>
+        <div class="container d-flex justify-content-between">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+            </svg>
+            <h2  class="display-3 text-center text-black">Past Events</h2>
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+            </svg>
+        </div>
             <nav class="navbar bg-body-black">
                 <div class="container text-black">
                     <form action="/action_page.php" method="get">
@@ -172,6 +150,4 @@
     </footer>
 </body>
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </html>
