--- a/details.html
+++ b/details.html
@@ -8,61 +8,39 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" href="Logo_Amazing_Events.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container-fluid">
-        <div>     
+        <div class="fondosala">     
         <img src="Logo_Amazing_Events.png" class="rounded float-start" alt="Logo" width="250" height="100">
         <h1  class="display-1 text-center text-black">Amazing Event</h1>
-            <div class="container-fluid">
-                <div class="row bg-black align-self-center">
-                    <div class="col">
-                        <button type="button" class="btn btn-outline-light btn-lg">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                                </li>
-                            </ul>
-                        </button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-outline-light btn-lg">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="upcoming.html">Upcoming Events</a>
-                                </li>
-                            </ul>
-                        </button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-outline-light btn-lg">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="past.html">Past Events</a>
-                                </li>
-                            </ul>
-                        </button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-outline-light btn-lg">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
-                                </li>
-                            </ul>
-                        </button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-outline-light btn-lg">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="stats.html">Stats</a>
-                                </li>
-                            </ul>
-                        </button>
-                    </div>
+        <div class="container-fluid row bg-black align-self-center">
+            <nav class="navbar navbar-expand-lg bg-body-black">
+                <div class="container-fluid">
+                  <a class="navbar-brand btn btn-outline-light btn-lg text-white" href="index.html">Home</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item p-2">
+                        <a class="nav-link btn btn-outline-light btn-lg text-white" aria-current="page" href="upcoming.html">Upcoming Events</a>
+                      </li>
+                      <li class="nav-item p-2">
+                        <a class="nav-link btn btn-outline-light btn-lg text-white" href="past.html">Past Events</a>
+                      </li>
+                      <li class="nav-item p-2">
+                        <a class="nav-link  btn btn-outline-light btn-lg text-white" href="contact.html">Contact</a>
+                      </li>
+                      <li class="nav-item p-2">
+                        <a class="nav-link  btn btn-outline-light btn-lg text-white" href="stats.html">Stats</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-            </div>
+              </nav>
+        </div>
             <div class="card mb-3 mg-3" style="max-width: 768px;">
                 <div class="row g-0 d-flex justify-content-center">
                   <div class="col-md-4">
@@ -78,7 +56,6 @@
                   </div>
                 </div>
               </div>
-            
         </div>
     </div>   
     <footer>
@@ -99,6 +76,4 @@
     </footer>
 </body>
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </html>
