--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" href="Logo_Amazing_Events.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container-fluid">
-        <div class="fondotelon">     
-        <img src="Logo_Amazing_Events.png" class="rounded float-start" alt="Logo" width="250" height="100">
-        <h1  class="display-1 text-center text-white">Amazing Event</h1>
+        <div class="fondosala">     
+        <img src="Logo_Amazing_Events.png" class="rounded float-start p-3" alt="Logo" width="250" height="100">
+        <h1  class="display-1 text-center text-black">Amazing Event</h1>
         <div class="container-fluid row bg-black align-self-center">
             <nav class="navbar navbar-expand-lg bg-body-black">
                 <div class="container-fluid">
@@ -33,7 +34,7 @@
                         <a class="nav-link  btn btn-outline-light btn-lg text-white" href="contact.html">Contact</a>
                       </li>
                       <li class="nav-item p-2">
-                        <a class="nav-link  btn btn-outline-light btn-lg text-white">Stats</a>
+                        <a class="nav-link  btn btn-outline-light btn-lg text-white" href="stats.html">Stats</a>
                       </li>
                     </ul>
                   </div>
@@ -41,16 +42,16 @@
               </nav>
         </div>
         <div class="container d-flex justify-content-between">
-            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="white" class="bi bi-chevron-left" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-left" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
               </svg>
-            <h2  class="display-3 text-center text-white">Home</h2>
-            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="white" class="bi bi-chevron-right" viewBox="0 0 16 16">
+            <h2  class="display-3 text-center text-black">Home</h2>
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-right" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
               </svg>
         </div>
         <nav class="navbar bg-body-black">
-            <div class="container text-white">
+            <div class="container text-black">
                 <form action="/action_page.php" method="get">
                     <fieldset>
                         <label for="categ1">Category</label>
@@ -149,5 +150,4 @@
     </footer>
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </html>
