--- a/past.html
+++ b/past.html
@@ -75,7 +75,7 @@
             <div class="container d-flex flex-wrap">
                 <div class="eventos">
                     <div class="card" style="width: 18rem;">
-                    <img src="Costume_Party.jpg" class="card-img-top" alt="Costume_Party">
+                    <img src="Costume_Party.jpg" class="card-img-top img-fit" alt="Costume_Party">
                     <div class="card-body">
                         <h5 class="card-title">Costume_Party</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Costume_Party</h6>
@@ -84,7 +84,7 @@
                     </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="Food_Fair.jpg" class="card-img-top" alt="Food_Fair">
+                        <img src="Food_Fair.jpg" class="card-img-top img-fit" alt="Food_Fair">
                     <div class="card-body">
                         <h5 class="card-title">Food Fair</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Welcome to the Food & Drink Expo!</h6>
@@ -93,7 +93,7 @@
                     </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="Marathon.jpg" class="card-img-top" alt="Marathon">
+                        <img src="Marathon.jpg" class="card-img-top img-fit" alt="Marathon">
                     <div class="card-body">
                         <h5 class="card-title">Marathon</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Publix Atlanta Marathon & Half Marathon</h6>
@@ -102,7 +102,7 @@
                     </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="Museum_Tour.jpg" class="card-img-top" alt="Museum_Tour">
+                        <img src="Museum_Tour.jpg" class="card-img-top img-fit" alt="Museum_Tour">
                     <div class="card-body">
                         <h5 class="Museum_Tour">Cinema</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Fiesta del Cine</h6>
@@ -111,7 +111,7 @@
                     </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="Music_Concert.jpg" class="card-img-top" alt="Music_Concert">
+                        <img src="Music_Concert.jpg" class="card-img-top img-fit" alt="Music_Concert">
                     <div class="card-body">
                         <h5 class="card-title">Music Concert</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Concert Music Festival</h6>
@@ -120,7 +120,7 @@
                     </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="Cinema.jpg" class="card-img-top" alt="Cinema">
+                        <img src="Cinema.jpg" class="card-img-top img-fit" alt="Cinema">
                     <div class="card-body">
                             <h5 class="Cinema">Cinema</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Film Festival</h6>
