--- a/contact.html
+++ b/contact.html
@@ -54,11 +54,11 @@
                 <Form class="form-control border-black">
                     <div class="form-control border-black">
                         <label for="exampleFormControlInput1" class="form-label border-black">Name:</label>
-                        <input type="name" class="form-control border-black" id="exampleFormControlInput1" placeholder="name">
+                        <input type="text" class="form-control border-black" id="exampleFormControlInput1" placeholder="your name">
                     </div>
                     <div class="form-control">
-                        <label for="exampleFormControlInput1" class="form-label">Email address:</label>
-                        <input type="email" class="form-control border-black" id="exampleFormControlInput1" placeholder="email@example.com">
+                        <label for="staticEmail" class="form-label">Email address:</label>
+                        <input type="email" class="form-control border-black" id="staticEmail" placeholder="email@example.com">
                     </div>
                     <div class="form-control">
                         <label for="exampleFormControlTextarea1" class="form-label">Mensagge:</label>
