--- a/upcoming.html
+++ b/upcoming.html
@@ -73,61 +73,7 @@
                 </div>
             </nav>
             <div class="container d-flex flex-wrap">
-                <div class="eventos">
-                    <div class="card" style="width: 18rem;">
-                    <img src="Costume_Party.jpg" class="card-img-top img-fit" alt="Costume_Party">
-                    <div class="card-body">
-                        <h5 class="card-title">Costume_Party</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Costume_Party</h6>
-                        <p class="card-text">The guests are dressed in costume, usually depicting a fictional or stock character, or historical figure.</p>
-                        <a href="details.html" class="card-link">Details</a>
-                    </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img src="Food_Fair.jpg" class="card-img-top img-fit" alt="Food_Fair">
-                    <div class="card-body">
-                        <h5 class="card-title">Food Fair</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Welcome to the Food & Drink Expo!</h6>
-                        <p class="card-text">24-26 April 2023 Birminghan.</p>
-                        <a href="details.html" class="card-link">Details</a>
-                    </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img src="Marathon.jpg" class="card-img-top img-fit" alt="Marathon">
-                    <div class="card-body">
-                        <h5 class="card-title">Marathon</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Publix Atlanta Marathon & Half Marathon</h6>
-                        <p class="card-text">Atlanta, United States of America 25 febrero, 2023.</p>
-                        <a href="details.html" class="card-link">Details</a>
-                    </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img src="Museum_Tour.jpg" class="card-img-top img-fit" alt="Museum_Tour">
-                    <div class="card-body">
-                        <h5 class="Museum_Tour">Cinema</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Fiesta del Cine</h6>
-                        <p class="card-text">Vivi 3 dias de Cine: 12, 13 y 14 de febrero.</p>
-                        <a href="details.html" class="card-link">Details</a>
-                    </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img src="Music_Concert.jpg" class="card-img-top img-fit" alt="Music_Concert">
-                    <div class="card-body">
-                        <h5 class="card-title">Music Concert</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Concert Music Festival</h6>
-                        <p class="card-text">This 2023 we return to Sancti Petri with a luxury poster and the limited promotion for next summer!</p>
-                        <a href="details.html" class="card-link">Details</a>
-                    </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img src="Cinema.jpg" class="card-img-top img-fit" alt="Cinema">
-                    <div class="card-body">
-                            <h5 class="Cinema">Cinema</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">Film Festival</h6>
-                            <p class="card-text">I lived 3 days of Cinema: February 12, 13 and 14.</p>
-                            <a href="details.html" class="card-link">Details</a>
-                    </div>
-                    </div>
+                <div class="eventos" id="eventsupcom">
                 </div>
             </div>
         </div>   
@@ -149,5 +95,6 @@
     </div>
 </footer>
 </body>
-
+<script src="js/data_ae.js"></script>
+<script src="js/upcom.js"></script>
 </html>
