--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-box">
         <div class="fondosala">     
         <img src="Logo_Amazing_Events.png" class="rounded float-start p-3" alt="Logo" width="250" height="100">
-        <h1  class="display-1 text-center text-black">Amazing Event</h1>
         <div class="container-fluid row bg-black align-self-center">
             <nav class="navbar navbar-expand-lg bg-body-black">
                 <div class="container-fluid">
@@ -55,15 +54,15 @@
                 <form action="/action_page.php" method="get">
                     <fieldset>
                         <label for="categ1">Category</label>
-                        <input type="radio" name="categ" value="Category" id="categ1">
+                        <input type="checkbox" name="categ1" value="Category" id="categ1">
                         <label for="categ2">Category</label>
-                        <input type="radio" name="categ" value="Category" id="categ2">    
+                        <input type="checkbox" name="categ2" value="Category" id="categ2">    
                         <label for="categ3">Category</label>
-                        <input type="radio" name="categ" value="Category" id="categ3">    
+                        <input type="checkbox" name="categ3" value="Category" id="categ3">    
                         <label for="categ4">Category</label>
-                        <input type="radio" name="categ" value="Category" id="categ4">
+                        <input type="checkbox" name="categ4" value="Category" id="categ4">
                         <label for="categ5">Category</label>
-                        <input type="radio" name="categ" value="Category" id="categ5">
+                        <input type="checkbox" name="categ5" value="Category" id="categ5">
                     </Fieldset>
                 </form>
               <form class="d-flex" role="search">
